# ballistic-6dof-sim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  main.py  project_explanation_simple.md  pyproject.toml  quick_test.py  requirements.txt  test_all_combos.py  trajectory_results.csv
.github/workflows/: ci.yml
docs/: assumptions.md  validation_report.md
notebooks/: 01_validation.ipynb  02_range_table.ipynb  03_wind_sensitivity.ipynb
src/: __init__.py  aerodynamics.py  atmosphere.py  base_bleed.py  equations_of_motion.py  fire_solution.py  integrator.py  interior_ballistics.py  moving_target.py  mrsi.py  projectile_config.py  propulsion.py  terminal_ballistics.py  weather.py  wgs84_gravity.py
tests/: __init__.py  test_aerodynamics.py  test_atmosphere.py  test_equations_of_motion.py  test_integrator.py  test_level200.py  test_level300.py  test_new_modules.py
